--- a/hospital_management_system/views/base_menus.xml
+++ b/hospital_management_system/views/base_menus.xml
@@ -9,6 +9,7 @@
     <menuitem id="menu_root_doctor"
               name="Doctor"
               parent="menu_hms"
+              groups = 'hms_manager_group'
     />
     <menuitem id="menu_root_patient"
               name="Patient"
